--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=36892540" charset="UTF-8"></script>
 <p class="lotus-breadcrub">
     <a href="{{ site.url }}/index.html" rel="nofollow" rel="nofollow" title="首页">Home</a>
     <span> &gt; </span>
